# course-data-tools

./: -r  .editorconfig  .gitattributes  .gitignore  .gitmodules  .nfs00000000045c9a6e0000002e  .npmignore  .travis.yml  CHANGELOG.md  Makefile  Pipfile  Procfile  README.md  auto-update.sh  bundle.py  download.py  getData-oo.py  getData.py  maintain-datafiles.py  moveDetailsFiles.py  prereq_notes.txt  pyproject.toml  requirements.txt  run.sh  update.py
.github/workflows/: check.yml  update-data.yml
lib/: break_apart_departments.py  calculate_terms.py  check_for_course_revisions.py  csvify.py  data.py  database.py  database_manual.py  fetch_course_details.py  fetch_term_data.py  flattened.py  json_folder_map.py  load_all_courses.py  load_courses.py  load_data_from_file.py  log.py  maintain_lists_of_entries.py  parse_links_for_text.py  parse_paragraph_as_list.py  parse_prerequisites.py  parse_timestring.py  paths.py  process_courses.py  regress_course.py  save_data.py  save_term.py  save_term_clbid_list.py  split_and_flip_instructors.py  test_parse_timestring.py  xmlify.py
playground/: prereq_notes.txt  prereqs_1994-2014.txt  prereqs_2010-2014.txt  prereqs_20151.mdown
scripts/: get-data.py  getData.py  profile.sh  publish.sh  version.sh
scripts/lib/: KEYNOTFOUND.py  break_apart_departments.py  calculate_terms.py  check_for_course_revisions.py  data.py  delete_file.py  dict_diff.py  ensure_dir_exists.py  extract_courses.py  fetch_course_details.py  fetch_term_data.py  find_details_subdir.py  find_terms.py  fix_invalid_xml.py  log.py  (+17 more)
stodevx_course_tools/: setup.py
(+50 files in other folders)
